@@ -73,10 +73,12 @@ ver 20100522:
 * If options.Display is set to 'off', a confirmation is no longer displayed by PSOCREATIONUNIFORM if initial particle positions or velocities are provided. These only appear if the display level is set to 'diagnose'.
 
 ver 20100522 + 1:
+* New constraint enforcement method: 'penalize', described in Perez 2007. With this method, convergence should be significantly faster, especially for equality constraints.
+* Add a note in the documentation suggesting that social and cognitive attraction parameters should have a sum of less than 4, as demonstrated by Perez 2007. A warning message appears (but the optimization continues) if the user defines an unstable swarm.
+* Minor performance improvements.
 
 To do (in no particular order):
-* Add a note in the documentation suggesting that social and cognitive attraction parameters should have a sum of less than 4, as demonstrated by Perez 2007. Code a warning dialogue if the user defines an unstable swarm.
-* New constraint enforcement method: 'penalize', described in Perez 2007.
+* Improved modularity: allow user to define a custom swarm acceleration function.
 * A demonstration of a binary optimization solution.
 * An output function defined by options.OutputFcns that can save current swarm state in a file which can be reloaded later as a problem structure, in case of a system crash.
 * Ability to define neighborhoods of particles to determine non-local best positions (social parameter).
